package com.aerofs.proto;

//removed reflection -- unneeded
//this makes obfuscation possible
option optimize_for = LITE_RUNTIME;

message PBLimit {
    enum Type {
        NOOP = 0;
        REQUEST_BW = 1;
        ALLOCATE = 2;
    }
    // NOTE: fields have to have non-negative, non-zero integers
    required Type type = 1; // requesters: REQUEST_BW, allocators: ALLOCATE
    optional uint64 bandwidth = 2; // this is an absolute level given in bytes/sec
}
