option java_package = "com.aerofs.proto";

// this file contains types that need reflective metadata

// the callee may set some fields in the result even they are optional in the template
message PBDumpStat {

    message PBTransport {
        optional string name = 1;
        optional uint64 bytes_in = 2;
        optional uint64 bytes_out = 3;
        repeated string connection = 4;
        optional string diagnosis = 5;
    }

    optional uint64 up_time = 1;

    repeated PBTransport tp = 3;

    optional string misc = 15;
}
